[package]
name = "sddf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "copy_rs"
path = "copy_rs.rs"

[dependencies]
num_enum = { version = "0.5.9", default-features = false }
zerocopy = "0.6.1"

[dependencies.sel4cp]
git = "https://gitlab.com/coliasgroup/rust-seL4"
rev = "dd01d196cba53ce0545f716e4d4a59c9cd49e620"
features = ["alloc"]


